--- a/css/styles.css
+++ b/css/styles.css
@@ -1,105 +1,7 @@
-/* Global Styles */
-body {
-  font-family: 'Arial', sans-serif;
-  background-color: #f0f0f0;
-  margin: 0;
-  padding: 0;
+body{
+  background: linear-gradient(100 deg, #cbd394, #78921d, #6f8817)
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
-.container {
-  width: 80%;
-  margin: 0 auto;
-}
 
-/* Navigation */
-header {
-  background-color: #333;
-}
 
-nav ul {
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
-  text-align: center;
-  background-color: #333;
-}
-
-nav ul li {
-  display: inline;
-  margin-right: 20px;
-}
-
-nav ul li a {
-  text-decoration: none;
-  color: #fff;
-}
-
-/* Page-specific styles */
-.resume h1,
-.resume h2,
-.resume h3,
-.resume p,
-.resume ul,
-.resume li {
-  text-align: center;
-}
-
-.Brady h1,
-.Brady h2,
-.Brady h3,
-.Brady p,
-.Brady ul,
-.Brady li {
-  text-align: center;
-}
-
-.animals h1,
-.animals h2,
-.animals h3,
-.animals p,
-.animals ul,
-.animals li {
-  text-align: center;
-}
-
-/* Different styles for sections */
-.resume,
-.Brady,
-.animals {
-  background-color: #fff;
-  padding: 20px;
-  margin-bottom: 20px;
-  border-radius: 10px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
-
-/* Center images */
-.resume img,
-.Brady img,
-.animals img {
-  display: block;
-  margin: 0 auto;
-}
-
-/* Enable hover effect on images */
-.resume img:hover,
-.Brady img:hover,
-.animals img:hover {
-  opacity: 0.8;
-}
-
-/* Center YouTube video */
-.Brady iframe,
-.animals iframe {
-  display: block;
-  margin: 0 auto;
-}
-
-/* Adjust order of image and text in Brady section */
-.Brady div {
-  order: 2;
-}
-
-.Brady p {
-  order: 1;
-}
