--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
-body{
-  background: linear-gradient(100 deg, #cbd394, #78921d, #6f8817)
+body {
+  background: linear-gradient(100deg, #cbd394, #78921d, #6f8817);
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
