--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,7 @@ header {
   background-color: #333;
   color: white;
   padding: 10px;
+  text-align: center; /* Centering the content in the header */
 }
 
 nav ul {
@@ -33,6 +34,7 @@ nav a {
 .resume,
 .Brady {
   margin-top: 20px;
+  text-align: center; /* Centering the content in each section */
 }
 
 .animals h1,
@@ -60,9 +62,12 @@ nav a {
 .Brady img,
 .Brady iframe,
 .resume iframe {
-  width: 100%; /* Fluid width */
+  max-width: 100%; /* Fluid width */
   height: auto;
   margin-top: 10px;
+  display: block; /* Center the image */
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .resume ul,
